--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
 </div>
 <div class="pure-g" style="padding: 1em;">
     <div class="pure-u-1-3">
-        <h2>Thoughts and Feelings</h2>
-            <a href="">Thoughts and feelings 1</a>
+        <h2>Newsletter </h2>
+            <a href="">Post 1</a>
         </div>
     <div class="pure-u-1-3">
         <h2>Code</h2>
