--- a/static/index.html
+++ b/static/index.html
@@ -2,33 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChrisBako </title>
+    <title>Chris Bakopoulos </title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
 </head>
 <body style="background-color:#181a1b; color: #e9967a">
-<div class="pure-g" >
+<div class="pure-g" style="padding:1rem">
     <div class="pure-u-1">
-        <div class="" style="padding: 1em;">
-            <h1 class="">About</h1>
-            <p>Welcome, to my website! <br> My name is Chris Bakopoulos and I do things</p>
+        <div style="padding: 1rem;">
+            <h1>
+                <img style="vertical-align:text-top;float:left; height:8rem;padding-right: 0.5rem;border-radius: 10rem;" src="img/me.jpg">
+                About
+            </h1>
+            <p style="padding-left:10rem">Welcome, to my website! <br>
+                My name is Chris Bakopoulos, software developer, someone who writes things no-one reads
+            </p>
         </div>
     </div>
 </div>
-<div class="pure-g" style="padding: 1em;">
-    <div class="pure-u-1-3">
+<div class="pure-g content" style="padding-left: 3rem;">
+    <div class="pure-u-1-6">
         <h2>Newsletter </h2>
-            <a href="">Post 1</a>
-        </div>
-    <div class="pure-u-1-3">
-        <h2>Code</h2>
-        <a href="https://github.com/ChristianBako/chris_bako_com">This website!</a>
+                <a href="">Post 1</a>
     </div>
-    <div class="pure-u-1-3">
-    <h2>Socials</h2>
-        <a href="https://www.instagram.com/bak0tac0/">Insta</a>
-        <br>
-        <a href="https://twitter.com/BakoTac0">Twitter</a>
+    <div class="pure-u-1-6">
+        <h2>Code</h2>
+            <a href="https://github.com/ChristianBako/chris_bako_com">This website!</a>
+    </div>
+    <div class="pure-u-1-6">
+        <h2>Socials</h2>
+            <a href="https://www.instagram.com/bak0tac0/">Insta</a>
+            <br>
+            <a href="https://twitter.com/BakoTac0">Twitter</a>
+    </div>
+    <div class="pure-u-1-6">
+        <h2>Papers</h2>
     </div>
 </div>
 <footer></footer>
