--- a/static/index.html
+++ b/static/index.html
@@ -22,8 +22,8 @@
 </div>
 <div class="pure-g content" style="padding-left: 3rem;">
     <div class="pure-u-1-6">
-        <h2>Newsletter </h2>
-                <a href="">Post 1</a>
+        <h2><a href="https://chrisbako.substack.com/">Newsletter </a></h2>
+                <a href="https://chrisbako.substack.com/">Post 1</a>
     </div>
     <div class="pure-u-1-6">
         <h2>Code</h2>
